# lapack-interface

./: CMakeLists.txt  README.md  fpm.toml  meson.build  meson_options.txt
config/: CMakeLists.txt  install-mod.py  meson.build  template.cmake
config/cmake/: Findcustom-blas.cmake  Findcustom-lapack.cmake
src/: CMakeLists.txt  lapack.f90  meson.build
src/lapack/: CMakeLists.txt  ev.f90  evd.f90  evr.f90  evx.f90  gst.f90  gv.f90  gvd.f90  gvx.f90  kinds.F90  meson.build  trf.f90  tri.f90  trs.f90  utils.f90
