# This file is part of lapack-interface.
# SPDX-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

srcs += files(
  'ev.f90',
  'evd.f90',
  'evr.f90',
  'evx.f90',
  'gst.f90',
  'gv.f90',
  'gvd.f90',
  'gvx.f90',
  'kinds.F90',
  'trf.f90',
  'tri.f90',
  'trs.f90',
  'utils.f90',
)
